# gcscfuse

./: .gitignore  CMakeLists.txt  LAZY_LOADING_IMPROVEMENTS.md  README.md  config.yaml.example  setup-vcpkg.sh  test-config.yaml  test_dummy_reader.sh  test_fuse_performance.sh  test_listing.sh  test_performance_config.yaml  vcpkg.json
.github/: CI_SETUP.md  CI_TEST.md  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  SETUP_SUMMARY.txt  pull_request_template.md  setup-ci.sh  validate-local.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  e2e-tests.yml  pr-title-check.yml
doc/: README_gcs_fs.md  UNIT_TEST_SETUP.md  benchmarking.md
src/: CMakeLists.txt  config.cpp  config.hpp  config_test.cpp  fuse_cpp_wrapper.hpp  gcs_fs.cpp  gcs_fs.hpp  hello.cpp  hello_fs.cpp  main.cpp  reader.hpp  reader_test.cpp  stat_cache.cpp
src/gcs/: gcs_client.cpp  gcs_client.hpp  gcs_client_test.cpp  gcs_sdk_interface.cpp  gcs_sdk_interface.hpp
src/gcs_fs/: CMakeLists.txt  README.md  config.cpp  config.hpp  gcs_fs.cpp  gcs_fs.hpp  main.cpp  stat_cache.cpp  stat_cache.hpp
src/gcs_fs/tests/: benchmark_cache.sh  fio_benchmark.sh  fio_compare.sh  quick_cache_test.sh
src/gcs_fs/tests/fio_results_20251227_125837/: 04_rand_read_4k.json
src/gcs_fs/tests/unit/: CMakeLists.txt  README.md  stat_cache_test.cpp
src/hello_fs/: CMakeLists.txt  README.md  hello_fs.hpp
src/tests/: FIO_TESTING.md  TESTING_CACHE_TTL.md
src/tests/fio_results_20251227_125837/: 02_seq_read.json  05_mixed_rw.json  06_metadata_ops.json  summary.txt
src/unit_tests/: stat_cache_test.cpp
tests/: README.md
tests/e2e/: quick_cache_test.sh  test_cache_ttl.py  test_read.sh  test_stat_cache_ttl.sh
tests/integration/: test_stat_cache_ttl.sh
tests/perf/: fio_benchmark.sh  fio_compare.sh
tests/perf/fio_results_20251227_125837/: 01_seq_write.json  03_rand_write_4k.json
